# mcp-catia

./: .flake8  .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
catia_mcp_service/: __init__.py  api_ai.py  api_assembly.py  api_brep.py  api_feature3d.py  api_param.py  api_sketch.py  api_utils.py  app.py  async_tasks.py  catia_mcp_service.py  catia_mcp_service.py.backup  di.py  i18n.py  permissions.py  schemas.py  service.py  swagger.py
catia_mcp_service/features/: advanced.py  ai_suggester.py  assembly.py  batch.py  export.py  feature3d.py  history.py  object_ops.py  param_ops.py  sketch.py  template.py
tests/: test_basic.py  test_service.py
